--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -9,5 +9,13 @@
         <TextBox x:Name="phonetic_addr" HorizontalAlignment="Left" Height="23" Margin="208,101,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.136,0.47"/>
         <ProgressBar x:Name="pbar_1" HorizontalAlignment="Left" Height="16" Margin="66,179,0,0" VerticalAlignment="Top" Width="262">
         </ProgressBar>
+        <Button x:Name="pbTag" Content="加分级标签" HorizontalAlignment="Left" Margin="66,245,0,0" VerticalAlignment="Top" Width="75" Click="pbTag_click"/>
+        <RichTextBox x:Name="the_http" Margin="333,0,0,0">
+            <FlowDocument>
+                <Paragraph>
+                    <Run Text="RichTextBox"/>
+                </Paragraph>
+            </FlowDocument>
+        </RichTextBox>
     </Grid>
 </Window>
